--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -181,7 +181,7 @@
                     [class.active]="SelectedStaff.id === s.id">
                     <input type="radio" name="job" value="Design">
                     <div class="icon">
-                        <img src="assets\img\icon-02.png" width="100%" height="100%">
+                        <img src="assets\img\{{s.firstName}}{{s.lastName}}.jpg" width="100%" height="100%" class="img-circle">
                     </div>
                     <h6>{{s.firstName}} {{s.lastName}}</h6>
                 </div>
