--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -474,11 +474,11 @@
 </p-confirmDialog> -->
 
 <p-toast></p-toast>
-<p-dialog header=" " [(visible)]="showBookAppointmentPopUp" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
+<p-dialog class="text-justify" header=" " [(visible)]="showBookAppointmentPopUp" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
     [draggable]="false" [resizable]="false" [position]="'top'" [closable]="false">
     <!-- <i class="pi pi-check-circle" style="font-size: 2rem;float: left;"></i> -->
     <p [ngStyle]="{'color': bookingSuccess!==true?'red':'black'}">
-        <i class="{{popIconType}}" style="font-size: 2rem;float: left;"></i> &nbsp;&nbsp; {{popUpMessage}}<a
+        <i class="{{popIconType}}" style="font-size: 2rem;float: left;"></i>{{popUpMessage}}<a
             href="https://www.eyemaxx.ca/pages/contact-us"
             *ngIf="bookingSuccess!=true">https://www.eyemaxx.ca/pages/contact-us</a>
         )
