--- a/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
+++ b/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
@@ -1,6 +1,7 @@
 <div class="tab-pane" id="summary">
     <div class="row text-center">
-        <h4 class="info-text">Appointment Confirmation Summary</h4>
+        <h4 class="info-text">Appointment Summary</h4>
+        <h4 style="color: red;" class="info-text">Please review the information of your appointment and confirm your booking</h4>
         <div class="row">
             <div class="col-md-3">
                 <br>
