--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
@@ -31,7 +31,7 @@
 
             </div>
             <div class="col-sm-6">
-                <div class="col-sm-3" *ngFor="let slot of ActiveSlots" (click)="onSlotSelect(slot)">
+                <div class="col-sm-4 col-lg-3" *ngFor="let slot of ActiveSlots" (click)="onSlotSelect(slot)">
                     <a style="padding: 10px 12px!important;min-width: 100px!important;"
                         class="btn btn-next btn-fill btn-danger btn-wd"
                         [class.clickedButton]="slot.id == SelectedSlot.id"
