--- a/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
+++ b/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
@@ -62,9 +62,9 @@
           </div>
           <h6>{{p.firstName}} {{p.lastName}}</h6>
           <!-- <button pButton pRipple type="button" icon="pi pi-user-edit" (click)="ShowPatientFormToEdit()" -->
-          <button style="font-size: 8pt;" pButton pRipple type="button" (click)="ShowPatientFormToEdit()"
+          <!-- <button style="font-size: 8pt;" pButton pRipple type="button" (click)="ShowPatientFormToEdit()"
             *ngIf="(SelectedUser.id!='-1')&&(SelectedUser.id === p.id)" class="p-button-rounded p-button-outlined">Edit
-            User</button>
+            User</button> -->
         </div>
       </div>
 
