--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -16,7 +16,12 @@
                         <mat-option *ngFor="let type of DoctorStoreTypeData.AppointmentTypes" [value]="type.id">{{
                             type.name }}
                         </mat-option>
-
+                        <mat-option [value]="-2">
+                            OHIP Child: 0-19
+                        </mat-option>
+                        <mat-option [value]="-2">
+                            OHIP Senior: 65+
+                        </mat-option>
                         <mat-option [value]="-2">
                             NIHB (Non-Insured Health Benefits)
                         </mat-option>
@@ -181,7 +186,8 @@
                     [class.active]="SelectedStaff.id === s.id">
                     <input type="radio" name="job" value="Design">
                     <div class="icon">
-                        <img src="assets\img\{{s.firstName}}{{s.lastName}}.jpg" width="100%" height="100%" class="img-circle">
+                        <img src="assets\img\{{s.firstName}}{{s.lastName}}.jpg" width="100%" height="100%"
+                            class="img-circle">
                     </div>
                     <h6>{{s.firstName}} {{s.lastName}}</h6>
                 </div>
